--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #spring.datasource.password=mysql
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://node226035-env-7110650.j.layershift.co.uk/proyectodb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://node226672-env-0193216.j.layershift.co.uk/proyectodb?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=IXCcmh03123
+spring.datasource.password=DVXycn13261
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
